# external_proc

./: .gitignore  README.md  build.cmd  build_all.cmd  build_wheel.cmd  build_wheel_all.cmd  gen_stub.cmd  pyproject.toml  setup.py
external_proc/: __init__.py  _external_proc.cp310-win32.pyd  _external_proc.cp310-win_amd64.pyd  _external_proc.cp36-win32.pyd  _external_proc.cp36-win_amd64.pyd  _external_proc.cp37-win32.pyd  _external_proc.cp37-win_amd64.pyd  _external_proc.cp38-win32.pyd  _external_proc.cp38-win_amd64.pyd  _external_proc.cp39-win32.pyd  _external_proc.cp39-win_amd64.pyd  _external_proc.pyi  external_proc.py
src/external_proc/: Exception.h  PeSection.cpp  PeSection.h  Process.cpp  Process.h  ProcessModule.cpp  ProcessModule.h  Ptr.cpp  Ptr.h  Reader.h  Writer.h  compile_cpp_exe.bat  dllmain.cpp  main.h
src/extra/: msvcrt.x32.lib  msvcrt.x64.lib
src/extra/get_proc_address/: compile.bat  main.cpp
src/extra/testdll/: compile.bat  main.cpp
tests/: ce_tuturial.py  ce_tuturial_x64.py  main.py  test_all_pythons.py
