[tool.poetry]
name = "external_proc"
version = "0.1.0"
description = ""
authors = ["bananasss00 <bananasss00@yandex.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pybind11 = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
